# MCPgateway

./: .env.example  .gitignore  DISCOVERY_DESIGN.md  HANDOFF.md  README.md  experiment_report.json  experiment_report.md  pyproject.toml  代码提交评审报告_fecd920f.plan.md
app/: __init__.py  __main__.py  main.py  settings.py
app/api/: admin_routes.py  health_routes.py  mcp_routes.py
app/core/: adaptation_engine.py  auth.py  config_loader.py  discovery_engine.py  error_mapper.py  errors.py  mcp_service.py  rate_limit.py  response_mapper.py  rest_connector.py  schema_generator.py  session_manager.py  tool_registry.py
app/db/: database.py  repositories.py
app/models/: discovery_models.py  jsonrpc.py  tool_config.py
app/utils/: logging.py
configs/openapi/: mock_api.yaml
configs/tools/: create_order.yaml  get_baidu_suggestion.yaml  get_user.yaml  probe_failure.yaml  probe_retry.yaml  probe_slow.yaml
data/: gateway.db
scripts/: __init__.py  llm_demo.py  mock_rest_api.py  run_experiments.py  verify_dashboard.py
static/: index.html
tests/: test_adaptation_engine.py  test_config_registry.py  test_discovery_engine.py  test_experiment_scripts.py  test_gateway.py  test_models.py  test_response_error_mapper.py  test_runtime_features.py  test_security_components.py  test_session_manager.py  test_sqlite_repositories.py
